--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://deada666.github.io
+url: http://blog.eveilheart.net
 title: Evil Blog
 subtitle: Блог одного скучающего разработчика
 author: Evil
